[gd_scene load_steps=4 format=3 uid="uid://2nm0qbmhuv6p"]

[ext_resource type="Script" path="res://game.gd" id="1_a6ptg"]
[ext_resource type="PackedScene" uid="uid://ceulebsmyg4rq" path="res://player.tscn" id="1_nc74y"]

[sub_resource type="Curve2D" id="Curve2D_dkvos"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -128, -120, 0, 0, 0, 0, 2048, -120, 0, 0, 0, 0, 2056, 1216, 0, 0, 0, 0, -120, 1216, 0, 0, 0, 0, -128, -120)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_a6ptg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.027451, 0.164706, 0.278431, 1)

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 85.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="HealButton" type="Button" parent="CanvasLayer"]
offset_left = 384.0
offset_top = 32.0
offset_right = 576.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 30
text = "Heal
-10 Score"

[node name="ArmorButton" type="Button" parent="CanvasLayer"]
offset_left = 704.0
offset_top = 32.0
offset_right = 896.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 30
text = "More Armor
-20 Score"

[node name="SpeedButton" type="Button" parent="CanvasLayer"]
offset_left = 1024.0
offset_top = 32.0
offset_right = 1216.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 30
text = "More Speed
-30 Score"

[node name="GunButton" type="Button" parent="CanvasLayer"]
offset_left = 1344.0
offset_top = 32.0
offset_right = 1536.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 30
text = "More Guns
-50 Score"

[node name="Player" parent="." instance=ExtResource("1_nc74y")]
position = Vector2(960, 544)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-960, -544)
curve = SubResource("Curve2D_dkvos")

[node name="EnemyPathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-128, -120)

[node name="EnemySpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 100
text = "Game Over"

[connection signal="pressed" from="CanvasLayer/HealButton" to="." method="_on_heal_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ArmorButton" to="." method="_on_armor_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GunButton" to="." method="_on_gun_button_pressed"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_timer_timeout"]
